# djsetbuilder

./: pyproject.toml
.devcontainer/: devcontainer.json
dj_set_builder/: .cache-tom2.uk  auth.py  login.py  set_builder.py  transform.py  vars.py
